tests/parsing/smtlib/poly/errors/018_sorted_var_list_empty.expected
File "tests/parsing/smtlib/poly/errors/018_sorted_var_list_empty.psmt2", line 2, character 17-18:
2 | (assert (forall () true))
                     ^
Error while parsing a term, read a closing parenthesis,
      but expected a sorted variable of the form "(var sort)".
